// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer matches snapshot 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer"
    role="region"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Choice b:"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={false}
          onClick={[Function]}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </section>
</div>
`;

exports[`Answer renders a checked answer 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer answer-checked"
    role="region"
  >
    <input
      checked={true}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Selected Choice b:"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={false}
          onClick={[Function]}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </section>
</div>
`;

exports[`Answer renders a correct answer 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer disabled answer-correct"
    role="region"
  >
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Choice b(Correct Answer):"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={true}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </section>
</div>
`;

exports[`Answer renders an incorrect answer 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer answer-incorrect"
    role="region"
  >
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Choice b(Incorrect Answer):"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={true}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </section>
</div>
`;

exports[`Answer renders feedback 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer"
    role="region"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Choice b:"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={false}
          onClick={[Function]}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
        <aside>
          <div
            className="question-feedback-content has-html"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<div>Insightful commentary</div>",
              }
            }
          />
        </aside>
      </div>
    </label>
  </section>
</div>
`;

exports[`Answer renders teacher preview 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer answer-correct"
    role="region"
  >
    <div
      className="correct-incorrect"
    >
      <span>
        Iconic
      </span>
    </div>
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Choice b:"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={false}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </section>
</div>
`;

exports[`Answer renders teacher review 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer"
    role="region"
  >
    <div
      className="review-wrapper"
    >
      <div
        className="review-count red"
      >
        <span
          className="selected-count"
          data-percent="50"
        >
          5
        </span>
        <span
          className="letter red"
        >
          b
        </span>
      </div>
      <div
        className="answer-answer"
      >
        <span
          className="answer-content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`Answer renders with a custom renderer if set 1`] = `
<div
  className="openstax-answer"
>
  <section
    className="answers-answer"
    role="region"
  >
    <input
      checked={false}
      className="answer-input-box"
      disabled={false}
      id="1-option-1"
      name="1-options"
      onChange={[Function]}
      type="radio"
    />
    <label
      className="answer-label"
      htmlFor="1-option-1"
      onKeyPress={[Function]}
    >
      <span
        className="answer-letter-wrapper"
      >
        <button
          aria-label="Choice b:"
          className="answer-letter"
          data-test-id="answer-choice-b"
          disabled={false}
          onClick={[Function]}
        >
          b
        </button>
      </span>
      <div
        className="answer-answer"
      >
        <div
          className="custom-renderer"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
            }
          }
        />
      </div>
    </label>
  </section>
</div>
`;
